// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateInput is working properly 1`] = `
<div
  class="datepicker"
>
  <div
    class="datepicker-days"
  >
    <table
      class="table-condensed"
    >
      <thead>
        <tr>
          <th
            class="prev"
          >
            <span
              class="pf-v5-c-icon"
            >
              <span
                class="pf-v5-c-icon__content"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v5-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0 256 512"
                  width="1em"
                >
                  <path
                    d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
                  />
                </svg>
              </span>
            </span>
          </th>
          <th
            class="picker-switch"
            colspan="5"
          >
            January 2019
          </th>
          <th
            class="next"
          >
            <span
              class="pf-v5-c-icon"
            >
              <span
                class="pf-v5-c-icon__content"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v5-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0 256 512"
                  width="1em"
                >
                  <path
                    d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                  />
                </svg>
              </span>
            </span>
          </th>
        </tr>
        <tr>
          <th
            class="dow"
          >
            Mo
          </th>
          <th
            class="dow"
          >
            Tu
          </th>
          <th
            class="dow"
          >
            We
          </th>
          <th
            class="dow"
          >
            Th
          </th>
          <th
            class="dow"
          >
            Fr
          </th>
          <th
            class="dow"
          >
            Sa
          </th>
          <th
            class="dow"
          >
            Su
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td
            class="day old"
            data-day="31"
          >
            31
          </td>
          <td
            class="day"
            data-day="1"
          >
            1
          </td>
          <td
            class="day"
            data-day="2"
          >
            2
          </td>
          <td
            class="day"
            data-day="3"
          >
            3
          </td>
          <td
            class="day weekend"
            data-day="4"
          >
            4
          </td>
          <td
            class="day weekend"
            data-day="5"
          >
            5
          </td>
          <td
            class="day"
            data-day="6"
          >
            6
          </td>
        </tr>
        <tr>
          <td
            class="day"
            data-day="7"
          >
            7
          </td>
          <td
            class="day"
            data-day="8"
          >
            8
          </td>
          <td
            class="day"
            data-day="9"
          >
            9
          </td>
          <td
            class="day"
            data-day="10"
          >
            10
          </td>
          <td
            class="day weekend"
            data-day="11"
          >
            11
          </td>
          <td
            class="day weekend"
            data-day="12"
          >
            12
          </td>
          <td
            class="day"
            data-day="13"
          >
            13
          </td>
        </tr>
        <tr>
          <td
            class="day"
            data-day="14"
          >
            14
          </td>
          <td
            class="day"
            data-day="15"
          >
            15
          </td>
          <td
            class="day"
            data-day="16"
          >
            16
          </td>
          <td
            class="day"
            data-day="17"
          >
            17
          </td>
          <td
            class="day weekend"
            data-day="18"
          >
            18
          </td>
          <td
            class="day weekend"
            data-day="19"
          >
            19
          </td>
          <td
            class="day"
            data-day="20"
          >
            20
          </td>
        </tr>
        <tr>
          <td
            class="day active"
            data-day="21"
          >
            21
          </td>
          <td
            class="day"
            data-day="22"
          >
            22
          </td>
          <td
            class="day"
            data-day="23"
          >
            23
          </td>
          <td
            class="day"
            data-day="24"
          >
            24
          </td>
          <td
            class="day weekend"
            data-day="25"
          >
            25
          </td>
          <td
            class="day weekend"
            data-day="26"
          >
            26
          </td>
          <td
            class="day"
            data-day="27"
          >
            27
          </td>
        </tr>
        <tr>
          <td
            class="day"
            data-day="28"
          >
            28
          </td>
          <td
            class="day"
            data-day="29"
          >
            29
          </td>
          <td
            class="day"
            data-day="30"
          >
            30
          </td>
          <td
            class="day"
            data-day="31"
          >
            31
          </td>
          <td
            class="day weekend old"
            data-day="1"
          >
            1
          </td>
          <td
            class="day weekend old"
            data-day="2"
          >
            2
          </td>
          <td
            class="day old"
            data-day="3"
          >
            3
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`DateInput toggles view to decades 1`] = `
<div
  class="datepicker"
>
  <div
    class="datepicker-years"
  >
    <table
      class="table-condensed"
    >
      <thead>
        <tr>
          <th
            class="prev"
          >
            <span
              class="glyphicon glyphicon-chevron-left"
            />
          </th>
          <th
            class="picker-switch"
            colspan="5"
            data-action="pickerSwitch"
          >
            2010-2021
          </th>
          <th
            class="next"
          >
            <span
              class="glyphicon glyphicon-chevron-right"
            />
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td
            colspan="7"
          >
            <span
              class="year "
            >
              2010
            </span>
            <span
              class="year "
            >
              2011
            </span>
            <span
              class="year "
            >
              2012
            </span>
            <span
              class="year "
            >
              2013
            </span>
            <span
              class="year "
            >
              2014
            </span>
            <span
              class="year "
            >
              2015
            </span>
            <span
              class="year "
            >
              2016
            </span>
            <span
              class="year "
            >
              2017
            </span>
            <span
              class="year "
            >
              2018
            </span>
            <span
              class="year active"
            >
              2019
            </span>
            <span
              class="year "
            >
              2020
            </span>
            <span
              class="year "
            >
              2021
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`DateInput toggles view to years 1`] = `
<div
  class="datepicker"
>
  <div
    class="datepicker-months"
  >
    <table
      class="table-condensed"
    >
      <thead>
        <tr>
          <th
            class="prev"
          >
            <span
              class="glyphicon glyphicon-chevron-left"
            />
          </th>
          <th
            class="picker-switch"
            colspan="5"
          >
            2019
          </th>
          <th
            class="next"
          >
            <span
              class="glyphicon glyphicon-chevron-right"
            />
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td
            colspan="7"
          >
            <span
              class="month active"
            >
              Jan
            </span>
            <span
              class="month"
            >
              Feb
            </span>
            <span
              class="month"
            >
              Mar
            </span>
            <span
              class="month"
            >
              Apr
            </span>
            <span
              class="month"
            >
              May
            </span>
            <span
              class="month"
            >
              Jun
            </span>
            <span
              class="month"
            >
              Jul
            </span>
            <span
              class="month"
            >
              Aug
            </span>
            <span
              class="month"
            >
              Sep
            </span>
            <span
              class="month"
            >
              Oct
            </span>
            <span
              class="month"
            >
              Nov
            </span>
            <span
              class="month"
            >
              Dec
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
